--- a/index.html
+++ b/index.html
@@ -36,56 +36,56 @@
       </div>
       <div class="fpcontainer contblock">
         <div class="fplist">
-          <img src="images_mart/1.png" width="255px" alt="1" />
+          <img src="images_mart/1.png" width="255" alt="1" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/2.png" width="255px" alt="2" />
+          <img src="images_mart/2.png" width="255" alt="2" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/3.png" width="255px" alt="3" />
+          <img src="images_mart/3.png" width="255" alt="3" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/4.png" width="255px" alt="4" />
+          <img src="images_mart/4.png" width="255" alt="4" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/5.png" width="255px" alt="5" />
+          <img src="images_mart/5.png" width="255" alt="5" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/6.png" width="255px" alt="6" />
+          <img src="images_mart/6.png" width="255" alt="6" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/7.png" width="255px" alt="7" />
+          <img src="images_mart/7.png" width="255" alt="7" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
           </div>
         </div>
         <div class="fplist">
-          <img src="images_mart/8.png" width="255px" alt="8" />
+          <img src="images_mart/8.png" width="255" alt="8" />
           <div class="nameprice">
             <p class="fpname">blue t-shirt</p>
             <p class="fpprice">26$</p>
